menu alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -119,8 +119,10 @@ font-family: 'Kalam', cursive;
 }
 
 .Table {
-font-family: 'Sanchez', serif;
+font-family: 'Kalam', cursive;
+
 }
+
 
 .prices {
 font-family: 'Kalam', cursive;
